<resources>
    <string name="app_name">Valostats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_header">//:Welcome,</string>
    <string name="welcome_subtitle">Are you ready to play?</string>
    <string name="agents">Agents</string>
    <string name="agents_subtitle">Get to know all the agents!</string>
    <string name="maps">Maps</string>
    <string name="maps_subtitle">Learn all the battleground!</string>
    <string name="sprays">Sprays</string>
    <string name="sprays_subtitle">Spray \'em down!</string>
    <string name="bundles">Bundles</string>
    <string name="bundles_subtitle">Did you got it, Son?</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_subtitle">Something New!</string>
    <string name="home">Home</string>
    <string name="liked">Liked</string>
    <string name="agent_subtitle">Tap to see more</string>
    <string name="map_subtitle">See the battleground</string>
</resources>