<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".views.Homepage">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/bg_glitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_glitch"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="18dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="18dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="18dp" />

            <TextView
                android:id="@+id/welcome_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/welcome_header"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintTop_toTopOf="@+id/topMargin" />

            <TextView
                android:id="@+id/welcome_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_subtitle"
                android:fontFamily="@font/montserrat_regular"
                app:layout_constraintTop_toBottomOf="@id/welcome_header"
                app:layout_constraintStart_toStartOf="@id/welcome_header"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                app:layout_constraintTop_toTopOf="@id/topMargin"
                android:src="@color/white" />

            <androidx.cardview.widget.CardView
                android:id="@+id/agentsCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/welcome_subtitle"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                android:layout_marginTop="28dp"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cv_shape_bg_wr"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/cypher_icon"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="-30dp"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agents"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/agents_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/mapsCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/agentsCardView"
                app:layout_constraintStart_toStartOf="@id/startMargin"
                app:layout_constraintEnd_toEndOf="@id/endMargin"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="14dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/cv_shape_bg_rw"
                    android:importantForAccessibility="no" />

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ascent_map"
                    android:scaleType="centerCrop"
                    android:layout_marginTop="-35dp"
                    android:layout_marginEnd="-20dp"
                    android:rotation="-30"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maps"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maps_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomSheetHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bottom_sheet_background"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:paddingTop="18dp"
            android:paddingStart="18dp"
            android:paddingEnd="18dp"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/bottom_sheet_indicator"
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:src="@drawable/bottom_sheet_indicator"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:importantForAccessibility="no" />

            <androidx.cardview.widget.CardView
                android:id="@+id/spraysCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_indicator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                app:cardCornerRadius="14dp"
                android:backgroundTint="@color/secondaryColor"
                tools:visibility="invisible">

                <ImageView
                    android:layout_width="125dp"
                    android:layout_height="100dp"
                    android:src="@drawable/chicken_spray"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="-5dp"
                    android:layout_marginTop="2dp"
                    android:rotation="10"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sprays"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sprays_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bundlesCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/spraysCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="14dp"
                android:backgroundTint="@color/secondaryColor"
                tools:visibility="invisible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/bundles"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="120dp"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bundles"
                        android:fontFamily="@font/montserrat_bold"
                        android:textSize="22sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bundles_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/comingSoonCardView"
                android:layout_width="0dp"
                android:layout_height="87dp"
                app:layout_constraintTop_toBottomOf="@id/bundlesCardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="14dp"
                android:backgroundTint="@color/black"
                tools:visibility="invisible">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/kayo_icon"
                    android:scaleType="centerCrop"
                    android:layout_marginStart="120dp"
                    android:layout_gravity="end"
                    android:importantForAccessibility="no" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coming_soon"
                        android:fontFamily="@font/montserrat_bold"
                        android:textAllCaps="true"
                        android:textSize="22sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coming_soon_subtitle"
                        android:fontFamily="@font/montserrat_regular"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/rv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_indicator"
                android:layout_marginTop="24dp"
                tools:text="Agent"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:visibility="invisible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHomepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_title"
                android:layout_marginTop="8dp"
                android:visibility="invisible"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/fetchingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintTop_toBottomOf="@id/rv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:visibility="invisible"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>